src/objects/Case_Service_Level_Criteria__c.object
<CustomObject>
    <description>Created as part of SIR 1333(2016.11):This object contains the fields which defines the rules(combination of value set) for identifying Case Service Level.</description>
    <fields>
        <fullName>Case_Service_Level__c</fullName>
        <description>Created as part of SIR 1333(2016.11): This field contains Case service level for each set of values on contact service level, product service level and project service level</description>
        <label>Case Service Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Service_Level__c</fullName>
        <description>Created as part of SIR 1333(2016.11): this field contains contact service level.</description>
        <label>Contact Service Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Created as part of SIR 1333(2016.11)</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Service_Level__c</fullName>
        <description>Created as part of SIR 1333(2016.11): This field contains Product Service Level Values</description>
        <label>Product Service Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Service_Level__c</fullName>
        <description>Created as part of SIR 1333(2016.11): This field contains values for project service level, from which the rules for case service level can be created.</description>
        <label>Project Service Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Case Service Level Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CaseSLA-{00000}</displayFormat>
        <label>CaseSLA Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Service Level Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>